# AdaIN

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Readme.md  download_data.py  infer.py  main.py  pyproject.toml  train.py
src/: data.py  model.py  vgg.py
