[tool.poetry]
name = "adain"
version = "0.1.0"
description = ""
authors = ["Ivan Valles <ivanvallesperez@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
torch = "^1.9.0"
torchvision = "^0.10.0"
tqdm = "^4.62.2"
numpy = "^1.21.2"
tensorboard = "^2.6.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"
ipython = "^7.27.0"
flake8 = "^3.9.2"
black = {version = "^21.9b0", allow-prereleases = true}
jupyter = "^1.0.0"
ipywidgets = "^7.6.5"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
